fixed header position mobile

--- a/src/styles/_Home.scss
+++ b/src/styles/_Home.scss
@@ -45,6 +45,7 @@
   }
 }
 
+// web view specific
 .Home-container {
   display: flex;
   flex-direction: column;
@@ -96,17 +97,10 @@
         align-items: center;
       }
     }
-
-    .mobile-home-content {
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
   }
 }
 
+// mobile view specific
 .Mobile-home-container {
   display: flex;
   flex-direction: column;
@@ -123,5 +117,9 @@
   .registration-container {
     padding: 30px 10px;
     margin: 30px 0;
+  }
+
+  .Home-top {
+    margin-top: 180px;
   }
 }
